concord_macros/tests/dsl/fail/fail_behavior_duplicate_cache.rs
use concord_macros::api;

api! {
    client DuplicateBehaviorCacheApi {
        base "https://example.com"

        cache standard {
            ttl 60s
        }

        behavior bad {
            cache standard
            cache off
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
