concord_macros/tests/dsl/fail/fail_behavior_duplicate_cache.stderr
error: duplicate cache policy in behavior
  --> tests/dsl/fail/fail_behavior_duplicate_cache.rs:13:13
   |
13 |             cache off
   |             ^^^^^
